- Patched an issue where objects persisted in memory after being destroyed. Full fix will possibly come in the form of c++ internal library - "You Died" shows on the screen when player dies 	- User is prompted to "Press 'A' to return to title screen -"FPX v0.1" Displays on the screen at the beginning 	- The user is prompted to "Press 'A' to begin" 	- Pressing A begins the gameplay

--- a/ScriptEngine/ScriptEngine.vbproj
+++ b/ScriptEngine/ScriptEngine.vbproj
@@ -125,6 +125,7 @@
     <Compile Include="CameraSwitcher.vb" />
     <Compile Include="ClosestPointShower.vb" />
     <Compile Include="ClosetPointFinder.vb" />
+    <Compile Include="DeadScreen.vb" />
     <Compile Include="DebugDeviceTextures.vb" />
     <Compile Include="DestroyBullets.vb" />
     <Compile Include="EditorTester.vb" />
@@ -162,6 +163,7 @@
     <Compile Include="StartringForce.vb" />
     <Compile Include="TestScript.vb" />
     <Compile Include="TestSpriteController.vb" />
+    <Compile Include="TitleScreen.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
